fix our team component on mobile

--- a/src/app/navigation/header/header.component.css
+++ b/src/app/navigation/header/header.component.css
@@ -10,6 +10,7 @@
 
 .toolbar-list-item {
   color: #fff;
+  cursor: pointer;
 }
 
 .toolbar-links-item {
